<resources>
    <string name="app_name">wmrc</string>
    <string name="error_invalid_userapp">This user@application string is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="menu_main_logout">Logout</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_about">About</string>
    <string name="activity_main_revert">Revert</string>
    <string name="activity_main_ignore">Ignore</string>
    <string name="activity_main_approve">Approve</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_login_login">Login to your account</string>
    <string name="activity_login_userapp">User@Application</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_go">Login</string>
    <string name="activity_login_apppassword">Warning! Use an application password (to create at https://en.wikipedia.org/wiki/Special:BotPasswords/wmrc with the relevant permissions) and not your main password.</string>
    <string name="activity_login_rooteddevice">Warning! Don\'t use this application on a rooted device (inquire with the author at jroquet@arkanosis.net regarding the security implications).</string>
    <string name="activity_about_description">Wikimedia recent changes in real time on your mobile device</string>
    <string name="activity_about_website">https://wmrc.arkanosis.net/</string>
    <string name="activity_about_license">wmrc is copyright (C) 2018-2019 Jérémie Roquet jroquet@arkanosis.net and licensed under the ISC license.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_nothing">No settings for the time being! Come back later.</string>
</resources>
