<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">

  <LinearLayout
      android:gravity="center"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/white"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/image_view_id"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:gravity="center"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/text_login_id"
        android:layout_width="fill_parent"
	android:layout_height = "wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/activity_login_login" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey">
      <EditText
	  android:id = "@+id/edit_login_id"
	  android:textColor="@color/black"
	  android:layout_width="fill_parent"
	  android:layout_height = "wrap_content"
	  android:hint="@string/activity_login_userapp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey">
      <EditText
	  android:id = "@+id/edit_password_id"
	  android:textColor="@color/black"
	  android:layout_width="fill_parent"
	  android:layout_height = "wrap_content"
	  android:inputType = "textPassword"
	  android:hint="@string/activity_login_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id = "@+id/button_id"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:padding = "10dp"
        android:text = "@string/activity_login_go"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/text_apppassword_id"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:autoLink="web"
        android:text="@string/activity_login_apppassword" />

    <TextView
        android:id="@+id/text_rooteddevice_id"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:autoLink="email"
        android:text="@string/activity_login_rooteddevice" />

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
