<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AboutActivity">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:navigationIcon="?homeAsUpIndicator"
      app:popupTheme="?attr/actionBarPopupTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:gravity="center"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/white"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/image_view_id"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:background="@color/white"
        android:gravity="center"
        android:src="@drawable/ic_logo" />

    <TextView
        style="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/about_description"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/activity_about_description" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/about_website"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:autoLink="web"
        android:text="@string/activity_about_website" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/about_license"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:autoLink="email"
        android:text="@string/activity_about_license" />

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
