<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="?attr/actionBarPopupTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/buttons_id"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_alignParentBottom="true"
      android:background="?attr/colorPrimary"
      android:gravity="center"
      android:orientation="horizontal"
      android:weightSum="3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/revert_id"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_toLeftOf="@id/ignore_id"
        android:layout_weight="1"
        android:text="@string/activity_main_revert"
        android:textColor="@color/white"
        android:background="@color/red"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ignore_id"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_toLeftOf="@id/approve_id"
        android:layout_weight="1"
        android:text="@string/activity_main_ignore"
        android:textColor="@color/white"
        android:background="@color/blue"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/approve_id"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:text="@string/activity_main_approve"
        android:textColor="@color/white"
        android:background="@color/green"/>

  </LinearLayout>

  <WebView
      android:id="@+id/web_view_id"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/buttons_id"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" />

  <ProgressBar
      android:id="@+id/spinner_id"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
